handle theme selection

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,13 @@
 site_name: Super Chasm Hunter
 theme:
   name: material
+  palette:
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: indigo
+      accent: indigo
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: indigo
+      accent: indigo
+
