--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,15 @@
 site_name: Super Chasm Hunter
 theme:
   name: material
+  language: it
+  palette:
+    - scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
