--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,16 @@ theme:
   language: it
   palette:
     - scheme: default
+      primary: green
+      accent: green
       toggle:
-        icon: material/brightness-7 
+        icon: material/weather-sunny
         name: Switch to dark mode
 
     - scheme: slate
+      primary: green
+      accent: green
       toggle:
-        icon: material/brightness-4
+        icon: material/weather-night
         name: Switch to light mode
 
