--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,11 @@
 site_name: Super Chasm Hunter
 theme:
   name: material
+  logo: assets/logo.svg
   language: it
   palette:
     - scheme: default
+      media: "(prefers-color-scheme: light)"
       primary: green
       accent: green
       toggle:
@@ -11,6 +13,7 @@ theme:
         name: Switch to dark mode
 
     - scheme: slate
+      media: "(prefers-color-scheme: dark)"
       primary: green
       accent: green
       toggle:
