--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install mkdocs-material
+        run: pip install mkdocs-mermaid2-plugin
 
       - name: Build MkDocs site
         run: mkdocs build --strict
