add mermaid as described in official doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,30 +6,15 @@ theme:
   language: it
   features:
     - navigation.top
-  # test
   markdown_extensions:
-  - pymdownx.superfences
-  - pymdownx.tabbed
-  - pymdownx.details
-  - pymdownx.highlight
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
-  - pymdownx.tasklist:
-      custom_checkbox: true
-  - pymdownx.keys
-  - admonition
-  - codehilite
-  - footnotes
-  - toc:
-      permalink: true
-  # test
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   plugins:
     - search
     - search.suggest
-    - mermaid2
   repo_url: https://github.com/FilippoGurioli/super-chasm-hunter-pm
   icon:
     repo: fontawesome/brands/github
