--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ theme:
   plugins:
     - search
     - search.suggest
+    - awesome-pages
   repo_url: https://github.com/FilippoGurioli/super-chasm-hunter-pm
   icon:
     repo: fontawesome/brands/github
