--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          pip install mkdocs-material mkdocs-awesome-pages-plugin
-
+        run: pip install mkdocs-material
 
       - name: Build MkDocs site
         run: mkdocs build --strict
