feat: try with awesome-nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ theme:
   plugins:
     - search
     - search.suggest
-    - awesome-pages
+    - awesome-nav
   repo_url: https://github.com/FilippoGurioli/super-chasm-hunter-pm
   icon:
     repo: fontawesome/brands/github
@@ -44,21 +44,6 @@ theme:
       toggle:
         icon: material/brightness-2
         name: Switch to light mode
-  nav:
-    - Home: index.md
-    - Prefazione: preface.md
-    - Scoping: scoping.md
-    - Planning: planning.md
-    - Launching: launching.md
-    - Monitoring: monitoring.md
-    - Closing: closing.md
-    - Allegati: 
-      - appendices
-      - Meeting template: appendices/meeting-template.md
-      - Scoping: 
-        - appendices/scoping
-      - Planning: 
-        - appendices/planning
 extra:
   generator: false
 extra_css:
