--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,5 @@
 site_name: Super Chasm Hunter
 markdown_extensions:
-  - attr_list
-  - md_in_html
-  - admonition
-  - pymdownx.details
-  - pymdownx.superfences
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -44,8 +36,8 @@ theme:
       toggle:
         icon: material/brightness-2
         name: Switch to light mode
-extra:
-  generator: false
-extra_css:
-  - stylesheets/extra.css
+# extra:
+#   generator: false
+# extra_css:
+#   - stylesheets/extra.css
 
