--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -3,7 +3,7 @@ nav:
   - Prefazione: preface.md
   - Ambito: scoping.md
   - Pianificazione: planning.md
-  - Esecuzione: execution.md
+  - Lancio: launching.md
   - Monitoraggio: monitoring.md
   - Chiusura: closing.md
   - Appendici: 
