feat: working at risk-management, create procurement-analysis

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -27,6 +27,7 @@ nav:
         - Building Requirements: appendices/scoping/RBSs/building-requirements.md
     - Pianificazione:
       - Gestione del Rischio: appendices/planning/risk-management.md
+      - Analisi Appalti: appendices/planning/procurement-analysis.md
       - Work Breakdown Structure: appendices/planning/WBS.md
       - Gestione delle Risorse: appendices/planning/resource-management.md
       - Gestione del Cashflow: appendices/planning/cashflow-management.md
