feat: finish meeting 6

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -14,6 +14,7 @@ nav:
       - Meeting 3: appendices/meetings/meeting-3.md
       - Meeting 4: appendices/meetings/meeting-4.md
       - Meeting 5: appendices/meetings/meeting-5.md
+      - Meeting 6: appendices/meetings/meeting-6.md
     - Scoping:
       - Project Overview Statement: appendices/scoping/POS.md
       - Analisi dei Rischi: appendices/scoping/risk-analysis.md
