--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -15,6 +15,7 @@ nav:
       - Meeting 4: appendices/meetings/meeting-4.md
       - Meeting 5: appendices/meetings/meeting-5.md
       - Meeting 6: appendices/meetings/meeting-6.md
+      - Meeting 7: appendices/meetings/meeting-7.md
     - Scoping:
       - Project Overview Statement: appendices/scoping/POS.md
       - Analisi dei Rischi: appendices/scoping/risk-analysis.md
