feat: add meeting 10

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -6,33 +6,36 @@ nav:
   - Lancio: launching.md
   - Monitoraggio: monitoring.md
   - Chiusura: closing.md
-  - Appendici: 
-    - Meeting Template: appendices/meeting-template.md
-    - Meetings: 
-      - Meeting 1: appendices/meetings/meeting-1.md
-      - Meeting 2: appendices/meetings/meeting-2.md
-      - Meeting 3: appendices/meetings/meeting-3.md
-      - Meeting 4: appendices/meetings/meeting-4.md
-      - Meeting 5: appendices/meetings/meeting-5.md
-      - Meeting 6: appendices/meetings/meeting-6.md
-      - Meeting 7: appendices/meetings/meeting-7.md
-    - Scoping:
-      - Project Overview Statement: appendices/scoping/POS.md
-      - Analisi dei Rischi: appendices/scoping/risk-analysis.md
-      - Analisi Finanziaria: appendices/scoping/financial-analysis.md
-      - Analisi SWOT: appendices/scoping/SWOT-analysis.md
-      - Analisi dei Requisiti: appendices/scoping/requirement-analysis.md
-      - Requirement Breakdown Structures:
-        - Main: appendices/scoping/RBSs/main.md
-        - Functional Requirements: appendices/scoping/RBSs/functional-requirements.md
-        - RPG Requirements: appendices/scoping/RBSs/rpg-requirements.md
-        - Rogue-Like Requirements: appendices/scoping/RBSs/rogue-like-requirements.md
-        - Building Requirements: appendices/scoping/RBSs/building-requirements.md
-    - Pianificazione:
-      - Gestione del Rischio: appendices/planning/risk-management.md
-      - Analisi Appalti: appendices/planning/procurement-analysis.md
-      - Gestione delle Risorse: appendices/planning/resource-management.md
-      - Work Breakdown Structure: appendices/planning/WBS.md
-      - Project Network Diagram: appendices/planning/PND.md
-      - Gantt Chart: appendices/planning/gantt.md
-      - Project Proposal: appendices/planning/project-proposal.md
+  - Appendici:
+      - Meeting Template: appendices/meeting-template.md
+      - Meetings:
+          - Meeting 1: appendices/meetings/meeting-1.md
+          - Meeting 2: appendices/meetings/meeting-2.md
+          - Meeting 3: appendices/meetings/meeting-3.md
+          - Meeting 4: appendices/meetings/meeting-4.md
+          - Meeting 5: appendices/meetings/meeting-5.md
+          - Meeting 6: appendices/meetings/meeting-6.md
+          - Meeting 7: appendices/meetings/meeting-7.md
+          - Meeting 8: appendices/meetings/meeting-8.md
+          - Meeting 9: appendices/meetings/meeting-9.md
+          - Meeting 10: appendices/meetings/meeting-10.md
+      - Scoping:
+          - Project Overview Statement: appendices/scoping/POS.md
+          - Analisi dei Rischi: appendices/scoping/risk-analysis.md
+          - Analisi Finanziaria: appendices/scoping/financial-analysis.md
+          - Analisi SWOT: appendices/scoping/SWOT-analysis.md
+          - Analisi dei Requisiti: appendices/scoping/requirement-analysis.md
+          - Requirement Breakdown Structures:
+              - Main: appendices/scoping/RBSs/main.md
+              - Functional Requirements: appendices/scoping/RBSs/functional-requirements.md
+              - RPG Requirements: appendices/scoping/RBSs/rpg-requirements.md
+              - Rogue-Like Requirements: appendices/scoping/RBSs/rogue-like-requirements.md
+              - Building Requirements: appendices/scoping/RBSs/building-requirements.md
+      - Pianificazione:
+          - Gestione del Rischio: appendices/planning/risk-management.md
+          - Gestione Appalti: appendices/planning/procurement-analysis.md
+          - Gestione delle Risorse: appendices/planning/resource-management.md
+          - Work Breakdown Structure: appendices/planning/WBS.md
+          - Project Network Diagram: appendices/planning/PND.md
+          - Gantt Chart: appendices/planning/gantt.md
+          - Project Proposal: appendices/planning/project-proposal.md
