--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -19,6 +19,7 @@ nav:
           - Meeting 8: appendices/meetings/meeting-8.md
           - Meeting 9: appendices/meetings/meeting-9.md
           - Meeting 10: appendices/meetings/meeting-10.md
+          - Meeting 11: appendices/meetings/meeting-11.md
       - Scoping:
           - Project Overview Statement: appendices/scoping/POS.md
           - Analisi dei Rischi: appendices/scoping/risk-analysis.md
