feat: create meeting 12

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -20,6 +20,7 @@ nav:
           - Meeting 9: appendices/meetings/meeting-9.md
           - Meeting 10: appendices/meetings/meeting-10.md
           - Meeting 11: appendices/meetings/meeting-11.md
+          - Meeting 12: appendices/meetings/meeting-12.md
       - Scoping:
           - Project Overview Statement: appendices/scoping/POS.md
           - Analisi dei Rischi: appendices/scoping/risk-analysis.md
