feat: finish planning

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -40,4 +40,4 @@ nav:
           - Work Breakdown Structure: appendices/planning/WBS.md
           - Project Network Diagram: appendices/planning/PND.md
           - Gantt Chart: appendices/planning/gantt.md
-          - Project Proposal: appendices/planning/project-proposal.md
+          - Proposta di progetto: appendices/planning/project-proposal.md
