feat: add daily meeting template to .nav

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -8,6 +8,7 @@ nav:
   - Chiusura: closing.md
   - Appendici:
       - Meeting Template: appendices/meeting-template.md
+      - Daily Meeting Template: appendices/daily-meeting-template.md
       - Meetings:
           - Meeting 1: appendices/meetings/meeting-1.md
           - Meeting 2: appendices/meetings/meeting-2.md
